--- a/StarProject/Views/Events/_EventPagination.cshtml
+++ b/StarProject/Views/Events/_EventPagination.cshtml
@@ -6,12 +6,20 @@
 
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
+        <li class="page-item @(currentPage <= 1 ? "disabled" : "")">
+            <button type="button" class="page-link" data-page="@(currentPage - 1)" aria-label="Previous">«</button>
+        </li>
+
         @for (int i = 1; i <= totalPages; i++)
         {
             <li class="page-item @(i == currentPage ? "active" : "") @(totalPages == 1 ? "disabled" : "")">
-                <a class="page-link" href="javascript:void(0);" data-page="@i" onclick="loadPage(@i)">@i</a>
+                <button type="button" class="page-link" data-page="@i">@i</button>
             </li>
         }
+
+        <li class="page-item @(currentPage >= totalPages ? "disabled" : "")">
+            <button type="button" class="page-link" data-page="@(currentPage + 1)" aria-label="Next">»</button>
+        </li>
     </ul>
 </nav>
 
